Stage testing